--- a/LayoutTry/wwwroot/css/style.css
+++ b/LayoutTry/wwwroot/css/style.css
@@ -38,8 +38,8 @@ h6 {
 --------------------------------------------------------------*/
 .back-to-top {
   position: fixed;
-  visibility: hidden;
-  opacity: 0;
+  /*visibility: hidden;
+  opacity: 0;*/
   right: 15px;
   bottom: 15px;
   z-index: 996;
@@ -128,7 +128,7 @@ h6 {
 }
 
 #main {
-  margin-left: 300px;
+  margin-left: 250px;
 }
 
 .container,
