--- a/LayoutTry/Views/Shared/_Layout.cshtml
+++ b/LayoutTry/Views/Shared/_Layout.cshtml
@@ -29,31 +29,12 @@
 
 </head>
 <body>
-    @* <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+    <header>
+        <nav class="navbar nav-menu navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">後臺外觀</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="List">客戶管理</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="List">產品上架</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Shopping" asp-action="List">購物</a>
-                        </li>
-
-                    </ul>
-                </div>
             </div>
         </nav>
-    </header> *@
+    </header>
     <!-- ======= Mobile nav toggle button ======= -->
     @* <i class="bi bi-list mobile-nav-toggle d-xl-none"></i> *@
     <!-- ======= Header ======= -->
@@ -75,6 +56,9 @@
                         </a>
                     </li>
                     <li>
+                         @* <a class="nav-link scrollto" asp-area="" asp-controller="Member" asp-action="List">
+    <i class="bx bx-user"></i>
+    <span>會員管理</span> *@
                         <a href="#about" class="nav-link scrollto">
                             <i class="bx bx-user"></i> 
                             <span>會員管理</span></a>
