--- a/LayoutTry/Views/TicketRequests/Index.cshtml
+++ b/LayoutTry/Views/TicketRequests/Index.cshtml
@@ -1,125 +1,158 @@
 ﻿@model IEnumerable<LayoutTry.Models.TicketRequest>
 
+
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "票券徵求/售讓一覽表";
 }
 
-<h1>Index</h1>
+<h1>票券徵求/售讓一覽表</h1>
+@using (Html.BeginForm())
+{
+    @Html.TextBox("txtKeyword", null, new { placeholder = "請輸入關鍵字" })
+    <input type="submit" value="查詢" class="ms-2 btn btn-outline-secondary" />
+}
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">新增票券徵求/售讓</a>
 </p>
-<table class="table">
+<table class="table table-striped table-hover">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.TicketCategoryId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.QuantityRequest)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.SeatRangeS)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.SeatRangeE)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RequestPrice)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RequestStatus)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ReleaseDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CreatedBy)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CreatedDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UpdatedBy)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UpdatedDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Event)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Member)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Section)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Show)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Ticket)
-            </th>
-            <th></th>
+
+            <th>序號</th>
+            <th>演出名稱</th>
+            <th>需求狀態</th>
+            <th>上架日期</th>
+            <th>編輯 | 刪除</th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.TicketCategoryId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.QuantityRequest)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SeatRangeS)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SeatRangeE)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.RequestPrice)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.RequestStatus)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ReleaseDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreatedBy)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreatedDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UpdatedBy)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UpdatedDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Event.EventId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Member.MemberId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Section.SectionId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Show.ShowId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Ticket.TicketId)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.TicketRequestId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.TicketRequestId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.TicketRequestId">Delete</a>
-            </td>
-        </tr>
-}
+        @{
+            int count = 0;
+            for (int i = 0; i < 10; i++)
+            {
+                count++;
+                <tr>
+
+                    <td>@count</td>
+                    <td>好了啦達康</td>
+                    <td>未處理</td>
+                    <td>2024/01/21</td>
+                    <td>
+                        <a asp-action="Edit">編輯</a> |
+
+                        <a asp-action="Delete" style="color: #dd1450; font-weight: bold;">刪除</a>
+                    </td>
+                    @* <td>
+            <a asp-action="Edit" asp-route-id="@item.TicketRequestId">編輯</a> |
+            @* <a asp-action="Details" asp-route-id="@item.TicketRequestId">Details</a> | *@
+                    @*<a asp-action="Delete" asp-route-id="@item.TicketRequestId">刪除</a>
+            </td> *@
+                </tr>
+            }
+
+        }
     </tbody>
 </table>
+
+@* <th>
+@Html.DisplayNameFor(model => model.TicketCategoryId)
+</th>
+<th>
+@Html.DisplayNameFor(model => model.QuantityRequest)
+</th>
+<th>
+@Html.DisplayNameFor(model => model.SeatRangeS)
+</th>
+<th>
+@Html.DisplayNameFor(model => model.SeatRangeE)
+</th>
+<th>
+@Html.DisplayNameFor(model => model.RequestPrice)
+</th>
+<th>
+@Html.DisplayNameFor(model => model.RequestStatus)
+</th>
+<th>
+@Html.DisplayNameFor(model => model.ReleaseDate)
+</th>
+<th>
+@Html.DisplayNameFor(model => model.CreatedBy)
+</th>
+<th>
+@Html.DisplayNameFor(model => model.CreatedDate)
+</th>
+<th>
+@Html.DisplayNameFor(model => model.UpdatedBy)
+</th>
+<th>
+@Html.DisplayNameFor(model => model.UpdatedDate)
+</th>
+<th>
+@Html.DisplayNameFor(model => model.Event)
+</th>
+<th>
+@Html.DisplayNameFor(model => model.Member)
+</th>
+<th>
+@Html.DisplayNameFor(model => model.Section)
+</th>
+<th>
+@Html.DisplayNameFor(model => model.Show)
+</th>
+<th>
+@Html.DisplayNameFor(model => model.Ticket)
+</th> *@
+
+@*
+@foreach (var item in Model)
+{
+<td>
+@Html.DisplayFor(modelItem => item.TicketCategoryId)
+</td>
+<td>
+@Html.DisplayFor(modelItem => item.QuantityRequest)
+</td>
+<td>
+@Html.DisplayFor(modelItem => item.SeatRangeS)
+</td>
+<td>
+@Html.DisplayFor(modelItem => item.SeatRangeE)
+</td>
+<td>
+@Html.DisplayFor(modelItem => item.RequestPrice)
+</td>
+<td>
+@Html.DisplayFor(modelItem => item.RequestStatus)
+</td>
+<td>
+@Html.DisplayFor(modelItem => item.ReleaseDate)
+</td>
+<td>
+@Html.DisplayFor(modelItem => item.CreatedBy)
+</td>
+<td>
+@Html.DisplayFor(modelItem => item.CreatedDate)
+</td>
+<td>
+@Html.DisplayFor(modelItem => item.UpdatedBy)
+</td>
+<td>
+@Html.DisplayFor(modelItem => item.UpdatedDate)
+</td>
+<td>
+@Html.DisplayFor(modelItem => item.Event.EventId)
+</td>
+<td>
+@Html.DisplayFor(modelItem => item.Member.MemberId)
+</td>
+<td>
+@Html.DisplayFor(modelItem => item.Section.SectionId)
+</td>
+<td>
+@Html.DisplayFor(modelItem => item.Show.ShowId)
+</td>
+<td>
+@Html.DisplayFor(modelItem => item.Ticket.TicketId)
+</td>
+}*@
