--- a/LayoutTry/Views/TicketRequests/List.cshtml
+++ b/LayoutTry/Views/TicketRequests/List.cshtml
@@ -9,15 +9,15 @@
 @using (Html.BeginForm())
 {
     @Html.TextBox("txtKeyword", null, new { placeholder = "請輸入關鍵字", name = "txtKeyword"})
-    <button type="submit" class="ms-2 btn btn-outline-secondary">
-        <i class="bi bi-search"></i> 查詢
+    <button type="submit" class="ms-2 btn btn-sm btn-outline-secondary">
+        <i class="bi bi-search"></i>  演出查詢 
     </button>
    @*  <input type="submit" value="查詢" /> *@
 }
 
-<p>
+@* <p>
     <a asp-action="Create">新增票券徵求/售讓</a>
-</p>
+</p> *@
 <table class="table table-striped table-hover">
     <thead>
         <tr>
@@ -29,9 +29,12 @@
                 @Html.DisplayNameFor(model => model.TRStatus)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.MemberID)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.ReleaseDate)
             </th>
-            <th>編輯 | 刪除</th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -49,17 +52,22 @@
                         @Html.DisplayFor(modelItem => item.strStatus)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.ReleaseDate)
+
+                        @Html.DisplayFor(modelItem => item.MemberID)
                     </td>
                     <td>
-                         
-                        <a asp-action="Delete" asp-route-id="@item.TicketRequestId" onclick="return confirm('確定要刪除嗎？')" class="btn btn-outline-danger">刪除</a>
-                                             
+                        <p class="font-monospace text-body-secondary">
+                            @Html.DisplayFor(modelItem => item.ReleaseDate)
+                        </p>
+                    </td>
+                    <td>
+                        <a asp-action="Delete" asp-controller="TicketRequests" asp-route-id="@item.TicketRequestId" onclick="return confirm('確定要刪除嗎？')" class="btn btn-sm btn-outline-danger"><i class="bi bi-trash"></i></a>
                     </td>
                 </tr>
             }
-}
+        }
     </tbody>
 </table>
+
 @* <a asp-action="Edit" asp-route-id="@item.TicketRequestId">編輯</a> |
 <a asp-action="Delete" asp-route-id="@item.TicketRequestId" style="color: #dd1450; font -weight: bold;">刪除</a>*@
