--- a/LayoutTry/Views/TicketRequests/List.cshtml
+++ b/LayoutTry/Views/TicketRequests/List.cshtml
@@ -25,14 +25,28 @@
             <th>
                 @Html.DisplayNameFor(model => model.eventName)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TRStatus)
-            </th>
+            
             <th>
                 @Html.DisplayNameFor(model => model.MemberID)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.ReleaseDate)
+            </th>
+            <th>
+                @* @Html.DisplayNameFor(model => model.TRStatus) *@
+                <div class="dropdown">
+                    <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        @Html.DisplayNameFor(model => model.TRStatus)
+
+                    </button>
+                    <ul class="dropdown-menu">
+                        @foreach (var item in Model)
+                        {
+                            <li><a class="dropdown-item" href="#" onclick="handleItemClick('@item.strStatus')">@Html.DisplayFor(modelItem => item.strStatus)</a></li>
+                            
+                        }
+                    </ul>
+                </div>
             </th>
             <th></th>
         </tr>
@@ -48,9 +62,7 @@
                     <td>
                         @Html.DisplayFor(modelItem => item.eventName)
                     </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.strStatus)
-                    </td>
+                    
                     <td>
 
                         @Html.DisplayFor(modelItem => item.MemberID)
@@ -61,6 +73,9 @@
                         </p>
                     </td>
                     <td>
+                        @Html.DisplayFor(modelItem => item.strStatus)
+                    </td>
+                    <td>
                         <a asp-action="Delete" asp-controller="TicketRequests" asp-route-id="@item.TicketRequestId" onclick="return confirm('確定要刪除嗎？')" class="btn btn-sm btn-outline-danger"><i class="bi bi-trash"></i></a>
                     </td>
                 </tr>
@@ -68,6 +83,13 @@
         }
     </tbody>
 </table>
-
+<script>
+    function handleItemClick(strStatus) {
+        // 在這裡處理點擊事件，你可以使用 strStatus 來進行相應的操作
+        alert('Clicked on: ' + strStatus);
+        // 或者調用其他 JavaScript 函數，發送 Ajax 請求等等
+        
+    }
+</script>
 @* <a asp-action="Edit" asp-route-id="@item.TicketRequestId">編輯</a> |
 <a asp-action="Delete" asp-route-id="@item.TicketRequestId" style="color: #dd1450; font -weight: bold;">刪除</a>*@
